# multicriterial-go

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
scripts/: draw_2d.py  run_evaluation.py  visualize_fonseca.py
src/: dataTypes.hpp  evolvent.cpp  evolvent.hpp  mcoProblem.cpp  mcoProblem.hpp  minmaxheap.hpp  multicriterialSolver.cpp  multicriterialSolver.hpp  queue.cpp  queue.hpp  sample.cpp  test_problems_collection.cpp  test_problems_collection.hpp
test/: solver_tests.cpp
